# cwms-reservoir-downloader

./: .gitignore  README.md  environment.yml  pyproject.toml
examples/: 01_new_mexico.py  02_oklahoma.py  03_california.py  04_new_mexico_all.py  README.md  _plot_helpers.py
examples/data/nm_elevations/: Diamond_A__Diamond_A.Elev.Inst._1Day.0.MRS.csv  Galisteo__Galisteo.Elev.Inst._1Day.0.MRS.csv  Jemez__Jemez.Elev.Inst._1Day.0.MRS.csv  Rocky__Rocky.Elev.Inst.1Hour.0.MRS-Rev.csv  Two_Rivers__Two_Rivers.Elev.Inst._1Hour.0.MRS.csv
src/cwms_reservoir_downloader/: __init__.py  __main__.py  cli.py  config.py  downloader.py
tests/: test_cli.py  test_config.py
