[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cwms-reservoir-downloader"
version = "0.1.0"
description = "Download USACE reservoir data for any U.S. state via the CWMS Data API."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Sayantan Majumdar" }]
keywords = ["USACE", "CWMS", "reservoir", "hydrology", "water-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Hydrology",
]
dependencies = [
    "cwms-python>=1.0.7",
    "pandas>=2.1",
    "pyarrow>=14",
    "requests>=2.31",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.8"]
examples = ["matplotlib>=3.8"]
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "black>=24",
    "isort>=5",
    "mypy>=1.9",
    "pandas-stubs",
    "matplotlib>=3.8",
]

[project.scripts]
cwms-reservoir-downloader = "cwms_reservoir_downloader.cli:main"

[project.urls]
Homepage = "https://github.com/montimaj/cwms-reservoir-downloader"
"cwms-python" = "https://github.com/HydrologicEngineeringCenter/cwms-python"
"cwms-data-api" = "https://github.com/USACE/cwms-data-api"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cwms_reservoir_downloader = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
